# cg-hw4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  io.hpp  main.cpp  make_collage.sh  ray3.hpp  render.hpp  vec3.hpp
outputs/: 1_multisphere.ppm  2_shadow.ppm  3_reflection.ppm  4_transmission.ppm  bonus.ppm  normal.ppm  red.ppm  shading.ppm  skybox.ppm
